Fixed select on mobile not working

--- a/src/Styles/_mediaQueries.scss
+++ b/src/Styles/_mediaQueries.scss
@@ -29,10 +29,6 @@
         }
     }
 
-    .bottomInfo {
-        overflow: hidden;
-    }
-
     .overview {
         width: 90%;
     }
